--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.session:spring-session-jdbc')
-    compile("org.mariadb.jdbc:mariadb-java-client:2.4.1")
     annotationProcessor('org.projectlombok:lombok')
+    compile('com.h2database:h2')
 
-    testAnnotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
